--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
         </div>
         <div class="card-body">
             <h2 class="price">$49 / mo</h2>
-            <p>Unlimited Matches</p>
-             <p>Unlimited Messages</p>
+            <p>100 Matches</p>
+             <p>200 Messages</p>
              <p>Unlimited App Usage</p>
             <div class="d-grid gap-2">
                 <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
@@ -193,7 +193,6 @@
         </div>
         <div class="card-body">
         <h2 class="price">$99 / mo</h2>
-        <p>Pirority Listing</p>
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
         <p>Unlimited App Usage</p>
